--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name=".MyAppliction"
         android:theme="@style/Theme.NeosoftAssignmentProject"
         android:usesCleartextTraffic="true">
+
         <activity
             android:name=".HomeActivity"
             android:label="@string/title_activity_home"
