--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
     id("androidx.navigation.safeargs.kotlin")
 
 }
-apply plugin: 'kotlin-kapt'
+
 
 android {
     compileSdkVersion 30
@@ -41,7 +41,8 @@ android {
         dataBinding true
     }
     buildFeatures{
-        viewBinding true
+        viewBinding = true
+
     }
 }
 
@@ -57,8 +58,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'wu.seal.jsontokotlin:library:3.6.1'
-
-
+    implementation 'androidx.fragment:fragment:1.2.2'
+    implementation 'androidx.lifecycle:lifecycle-process:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-service:2.2.0'
+    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.2.0'
     def lifecycle_version = "2.3.1"
     def arch_version = "2.1.0"
 
@@ -66,6 +69,7 @@ dependencies {
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
     // LiveData
     implementation("androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version")
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.2.0'
 
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9")
 
@@ -86,6 +90,8 @@ dependencies {
     implementation 'androidx.datastore:datastore-preferences:1.0.0-alpha08'
 
     implementation("io.coil-kt:coil:1.2.2")
+    //easy permission
+    implementation 'com.vmadalin:easypermissions-ktx:1.0.0'
 
 
 }
