--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,22 +3,25 @@
     package="com.example.neosoftassignmentproject">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
 
     <application
+        android:name=".MyAppliction"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".MyAppliction"
         android:theme="@style/Theme.NeosoftAssignmentProject"
         android:usesCleartextTraffic="true">
-
+        <activity android:name=".HomeScreenActivity"></activity>
         <activity
             android:name=".HomeActivity"
             android:label="@string/title_activity_home"
-            android:theme="@style/Theme.NeosoftAssignmentProject.NoActionBar"></activity>
-        <activity android:name=".MainActivity">
+            android:theme="@style/Theme.NeosoftAssignmentProject.NoActionBar" />
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
