--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,24 +74,34 @@ dependencies {
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9")
 
     def nav_version = "2.3.5"
-
+//navigation comp
     implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
     implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
-
+//network
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.1"
 
     implementation 'com.google.code.gson:gson:2.8.7'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-
+//preference
     implementation "androidx.datastore:datastore:1.0.0-beta01"
     implementation("androidx.datastore:datastore-preferences:1.0.0-beta01")
     implementation 'androidx.datastore:datastore-preferences:1.0.0-alpha08'
-
+//image
     implementation("io.coil-kt:coil:1.2.2")
     //easy permission
     implementation 'com.vmadalin:easypermissions-ktx:1.0.0'
 
+    def room_version = "2.3.0"
+//room
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    // To use Kotlin annotation processing tool (kapt)
+    kapt "androidx.room:room-compiler:$room_version"
+
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:$room_version"
 
 }
